docs: update CIS notebook link with proper title and section
- Move CIS notebook from 'Other Documentation' to new 'Interactive Notebooks' section
- Rename 'WIP CIS' to 'Climate Information Services (CIS) Readiness'
- Add descriptive subtitle about the notebook contents

--- a/index.qmd
+++ b/index.qmd
@@ -16,4 +16,7 @@ libraries and shared data (such as the admin boundaries).
 
 - [Guidelines for Developing Observable Notebooks](/docs/nb_guidelines.qmd)
 - [Notebook Translation Guide](/docs/translation.qmd)
-- [WIP CIS](/notebooks/cis/cis_readiness.qmd)
+
+# Interactive Notebooks
+
+- [Climate Information Services (CIS) Readiness](/notebooks/cis/cis_readiness.qmd) - Explore CIS readiness indicators, hazard intersections, and implementation pathways across Sub-Saharan Africa
