refactor: Remove dead code

--- a/notebooks/climateRational/notebook.qmd
+++ b/notebooks/climateRational/notebook.qmd
@@ -284,21 +284,6 @@ renderToDiv = (id, render) => {
   const viz = render();
   div.replaceChildren(viz);
 };
-
-// alphabetic sort, nulls first
-sortByField = (a, b, { field } = {}) => {
-  const av = a[field];
-  const bv = b[field];
-
-  // nulls first
-  if (av === null || bv === null) {
-    if (av === bv) return 0;
-    return av === null ? -1 : 1;
-  }
-
-  // alphabetical compare
-  return av.localeCompare(bv);
-};
 ```
 
 ## Styling
@@ -744,9 +729,7 @@ hazardExposure_plotData;
 ```{ojs}
 admin0Iso3 = admin0Select.map((d) => d.iso3c);
 admin1Names = admin1Select.map((d) => d.admin1_name);
-admin1NamesClean = admin1Select.map((d) =>
-  cleanAdminInput_SQL(d.admin1_name),
-);
+admin1NamesClean = admin1Select.map((d) => cleanAdminInput_SQL(d.admin1_name));
 ```
 
 #### Climate data
@@ -1456,7 +1439,7 @@ bars_extremeEvents = () => {
 
 ```{ojs}
 stackbars_hazardExposure = () => {
-  // --- 1. Assign category to each crop (same as first chart) ---
+  // --- Assign category to each crop (same as first chart) ---
   const dataWithCategory = hazardExposure_plotData.map((row) => {
     const category =
       Object.entries(exposure_groups).find(([group, crops]) =>
@@ -1466,19 +1449,7 @@ stackbars_hazardExposure = () => {
     return { ...row, category };
   });
 
-  // --- 2. Compute category totals using hazard === "any" ---
-  const totalsByCategory = new Map(
-    d3.rollup(
-      dataWithCategory.filter((d) => d.hazard === "any"),
-      (v) => d3.sum(v, (d) => d.value),
-      (d) => d.adminName,
-      (d) => d.category,
-      (d) => d.timeframe,
-      (d) => d.scenario,
-    ),
-  );
-
-  // --- 3. Filter to only needed timeframe/scenario AND remove "any" ---
+  // --- Filter to only needed timeframe/scenario AND remove "any" ---
   let baseFiltered = dataWithCategory.filter(
     (d) =>
       d.hazard !== "any" &&
@@ -1486,7 +1457,7 @@ stackbars_hazardExposure = () => {
       ["historic", "ssp245", "ssp585"].includes(d.scenario),
   );
 
-  // --- 4. Apply prod_type logic (same as first chart) ---
+  // --- Apply prod_type logic (same as first chart) ---
   let dataForAggregation;
   if (!prod_type) {
     // Aggregate hazards by category (not crop)
