refactor: clean up exposure queries and category map

--- a/notebooks/climateRational/notebook.qmd
+++ b/notebooks/climateRational/notebook.qmd
@@ -433,7 +433,11 @@ pov_plotData = {
 ```{ojs}
 exposure_plotData = {
   const resp = await db.query(`
-  SELECT *
+  SELECT
+    iso3,
+    admin1_name,
+    crop,
+    value
   FROM exposure
     WHERE 1=1
     AND iso3 in ${sqlList(admin0Iso3)}
@@ -502,6 +506,12 @@ exposure_groups = new Object({
     "robusta-coffee",
   ],
 });
+
+cropCategoryMap = new Map(
+  Object.entries(exposure_groups).flatMap(([category, crops]) =>
+    crops.map((crop) => [crop, category]),
+  ),
+);
 ```
 
 #### data - recentChanges
@@ -819,10 +829,7 @@ climateForm();
 ```{ojs}
 exposureBars_keyFacts = function () {
   const dataCategories = exposure_plotData.map((row) => {
-    const category =
-      Object.entries(exposure_groups).find(([group, crops]) =>
-        crops.includes(row.crop),
-      )?.[0] || "other";
+    const category = cropCategoryMap.get(row.crop) || "other";
     return { ...row, category };
   });
 
@@ -1441,10 +1448,7 @@ bars_extremeEvents = () => {
 stackbars_hazardExposure = () => {
   // --- Assign category to each crop (same as first chart) ---
   const dataWithCategory = hazardExposure_plotData.map((row) => {
-    const category =
-      Object.entries(exposure_groups).find(([group, crops]) =>
-        crops.includes(row.crop),
-      )?.[0] || "other";
+    const category = cropCategoryMap.get(row.crop) || "other";
 
     return { ...row, category };
   });
