fix(index): fix notebook path in main index
fix(index): fix notebook path in main index

--- a/index.qmd
+++ b/index.qmd
@@ -9,10 +9,9 @@ notebooks being worked on, etc.
 
 # Notebooks
 
-- [Vulnerability Notebook](/notebooks/nb_vulnerability/notebook_vulnerability.qmd)
+- [Vulnerability Notebook](/notebooks/nb_vulnerability/notebook.html)
 
 # Other Documentation and Notebook Guidelines:
 
 - [Guidelines for Developing Observable Notebooks](/docs/nb_guidelines.qmd)
 - [Notebook Translation Guide](/docs/translation.qmd)
-
