fix(components - AdminSelect): allow ssa to be an opt in for the multi-select for admin regions. apply same filtering of regions as boundaries.

--- a/components/_adminSelectors.qmd
+++ b/components/_adminSelectors.qmd
@@ -30,17 +30,22 @@ adminDB = await DuckDBClient.of({
 countries = {
   const country_list = await FileAttachment("/data/shared/atlas_countries.json").json();
   const filteredCountries = country_list
-    .filter((c) => c.include && c.iso3c !== "SDN")
+    .filter((c) => c.include)
     .map(({ include, ...rest }) => rest);
   return filteredCountries;
 };
 
-viewof admin0Select = Inputs.select(
-  countries,
-  {
-    format: (d) => d.iso3c,
-  },
-)
+ssaObj = new Object({
+  admin0_name: null,
+  admin1_name: null,
+  iso3: null,
+  translation: {
+    en: "Sub-Saharan Africa", 
+    fr: "Afrique subsaharienne",
+  }
+})
+
+viewof admin0Select = Inputs.input([])
 ```
 
 ```{ojs}
@@ -60,18 +65,9 @@ dataAdmin1 = {
     },
     ...regions
   ]
-  // return regions
-  // AND iso3 in ('${countryMain.join("', '")}')
 }
 
-dataAdmin1
-
-viewof admin1Select = Inputs.select(
-dataAdmin1,
-    {
-      format: (d) => d.admin1_name
-    }
-)
+viewof admin1Select = Inputs.input([])
 ```
 
 ```{ojs}
@@ -83,22 +79,16 @@ dataAdmin2 = await adminDB.query(`
   AND admin1_name = '${admin1Select.admin1_name}'
 `)
 
-dataAdmin2
-
-viewof admin2Select = Inputs.select(
-  dataAdmin2,
-  {
-    format: (d) => d.admin2_name
-  }
-)
+viewof admin2Select = Inputs.input([])
 ```
 
 ```{ojs}
 // Admin form generator
-admin01Form = () => {
+admin01Form = (ssa) => {
+  const countryArray = ssa ? [ssaObj, ...countries] : countries
   const admin0 = Inputs.bind(
     Inputs.select(
-        countries,
+        countryArray,
         {
         //NOTE: _lang & general_translations are defined in 
         // components/_lang.qmd
@@ -133,12 +123,11 @@ admin01Form = () => {
   )
 }
 
-admin01Form()
-
-admin012Form = () => {
+admin012Form = (ssa) => {
+  const countryArray = ssa ? [ssaObj, ...countries] : countries
   const admin0 = Inputs.bind(
     Inputs.select(
-        countries,
+        countryArray,
         {
         //NOTE: _lang & general_translations are defined in 
         // components/_lang.qmd
