--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -1199,7 +1199,8 @@ s13Data = {
     const maxNameLength = Math.max(...countryOrder.map(name => name.length), 0);
     const marginLeft = Math.max(200, maxNameLength * 8); // At least 200px, or 8px per character
     
-    return Plot.plot({
+    // Wrap chart in scrollable container to handle many regions
+    const chart = Plot.plot({
       marginLeft: marginLeft,
       marginTop: 40,
       marginBottom: 60,
@@ -1245,6 +1246,11 @@ s13Data = {
         Plot.ruleX([0], { stroke: "black" })
       ]
     });
+    
+    // Return chart in scrollable container with fixed max-height
+    return htl.html`<div style="max-height: 600px; overflow-y: auto; border: 1px solid #eee; border-radius: 4px; padding: 10px;">
+      ${chart}
+    </div>`;
   } else {
     const tableData = s13Data.map(d => ({
       "Admin Name": d.admin,
