--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -169,6 +169,20 @@ nbTitle = _lang({
 });
 atlasHero(nbTitle, hero_url);
 tooltipStyle
+
+// Add global hover effect styles for Observable Plot maps
+mapHoverStyles = htl.html`<style>
+  /* Hover effect for Observable Plot geo paths - white stroke default, black on hover */
+  figure svg g[aria-label*="geo"] path,
+  svg g path[fill] {
+    transition: stroke 0.15s ease, stroke-width 0.15s ease;
+  }
+  figure svg g[aria-label*="geo"] path:hover,
+  svg g path[fill]:hover {
+    stroke: black !important;
+    stroke-width: 2px !important;
+  }
+</style>`
 ```
 
 
